[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/shared/hex_color_picker.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.788235, 0.258824, 0.141176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HexColorPicker" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1815.0
margin_bottom = -1047.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_right = 66.0
margin_bottom = 33.0
rect_min_size = Vector2( 66, 33 )
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
edit_alpha = false

[node name="ColorPanel" type="PanelContainer" parent="ColorPickerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 70.0
margin_top = 6.0
margin_right = 86.0
margin_bottom = 27.0
rect_min_size = Vector2( 16, 0 )
text = "#"
align = 2

[node name="HexEdit" type="LineEdit" parent="."]
margin_left = 90.0
margin_right = 180.0
margin_bottom = 33.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Warning" type="Panel" parent="HexEdit"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="text_changed" from="HexEdit" to="." method="_on_HexEdit_text_changed"]
[connection signal="text_entered" from="HexEdit" to="." method="_on_HexEdit_text_entered"]
